--- a/index.html
+++ b/index.html
@@ -21,10 +21,19 @@
         </div>
 
         <div class="portada">
-            
-
-
-
+            <div class="contenedor-portada">
+                <div class="informacion">
+                    <div class="informacion" id="viaja">
+                        <h2>Viaja a precios bajos</h2>
+                    </div>
+                    <div class="informacion" id="ida">
+                        <p>Ida y regreso desde USD 320</p>
+                    </div>
+                    <div class="informacion" id="compraya">
+                        <a href="#" role="button" target="_self">Compra ya</a>
+                    </div>
+                </div>
+            </div>
         </div>
 
 
