--- a/index.html
+++ b/index.html
@@ -35,6 +35,76 @@
                 </div>
             </div>
         </div>
+        
+        <form >
+            <fieldset>
+                <legend>
+                    <h3>¿A dónde viajas? </h3>
+                </legend>
+                <div class="completar">
+                    <input type="text" class="form-control"  placeholder="Desde">
+                    <input type="text" class="form-control"  placeholder="Hasta">    
+                </div>
+            </fieldset>
+
+            <fieldset>
+                <legend>
+                    <h3>¿Cuándo viajas?</h3>
+                </legend>
+                <div class="completar">
+                    <input type="date" class="form-control"  placeholder="Fecha de ida">
+                    <input type="date" class="form-control"  placeholder="Fecha de regreso">    
+                </div>
+            </fieldset>
+            <fieldset>
+                <legend>
+                    <h3>¿Cómo viajas?</h3>
+                </legend>
+                <div class="completar">
+                    <input type="text" class="form-control"  placeholder="1 Adulto,Económica">
+                    <input type="text" class="form-control"  placeholder="Código promocional">    
+                </div>
+            </fieldset>
+            <div class="pie-form">
+                <div class="fechas">
+                    <label class="check-box">Fechas flexibles (+/-) días
+                        <input type="checkbox">
+                        <span class="check-mark"></span>
+
+                    </label>
+                </div>
+                <div class="buscarvuelos" id="buscarvuelo">
+                    <a href="#" role="button" target="_self">Buscar vuelos</a>
+                </div>
+
+
+            </div>
+
+        </form>
+
+        <aside>
+            <div class="imagen-aside">
+                <img src="../LandingPages_Avianca/img/mx_cun_playa_2880_1620_08.png" alt="">
+            </div>
+            <div class="descripcion">
+                <h3 class="titulo">
+                        Buenos precios sin cargos extras
+                </h3>
+                <p>
+                    Tú eliges la tarifa que se ajuste a tus necesidades y 
+                    nosotros te garantizamos el mismo precio de inicio a 
+                    fin y sin sorpresas*. ¡Atrévete a comprar online! 
+                </p>
+
+            </div>
+
+            <div class="vermas"> 
+                <a href="#" role="button" target="_self">
+                    Ver más
+                </a>
+            </div>
+
+        </aside>
 
 
 
