--- a/index.html
+++ b/index.html
@@ -194,11 +194,79 @@
                     </div>
                 </a>
 
-
+                <a href="#">
+                    <div class="tarjeta">
+                        <div class="ciudades">
+                            <div class="ciudades" id="ciudad1">Bogota
+                            </div>
+                            <div  class="ciudades" id="ciudad2">
+                                a Cancún
+                            </div>
+    
+                        </div>
+                        <div class="idayvuelta">
+                            <p>Ida y vuelta desde</p>
+                        </div>
+                        <div class="precio">
+                            <p>USD 320</p>
+                        </div>
+    
+                    </div>
+                </a>
+                <div class="vermas"> 
+                    <a href="#" role="button" target="_self">
+                        Ver más ofertas
+                    </a>
+                </div>
 
             </div>
 
         </section>
+        <footer class="contactanos">
+            <div class="texto-contactanos">
+                <p>Contáctanos: </p>
+            </div>
+            <div class="redes-sociales">
+                    <a href="https://es-la.facebook.com/AviancaGlobal/" target="_blank">
+                        <img class="icono" src="../LandingPages_Avianca/img/icon_footer_facebook.svg" alt="facebook">
+                    </a>
+                    <a href="https://twitter.com/avianca" target="_blank">
+                        <img class="icono" src="../LandingPages_Avianca/img/icon_footer_twitter.svg" alt="twitter">
+                    </a>
+                    <a href="https://www.instagram.com/avianca/?hl=es-la" target="_blank">
+                        <img class="icono" src="../LandingPages_Avianca/img/icon_footer_instagram.svg" alt="instagram">
+                    </a>
+                    <a href="https://www.youtube.com/user/aviancachannel" target="_blank">
+                        <img class="icono" src="../LandingPages_Avianca/img/ic-youtube.svg" alt="youtube">
+                    </a>
+
+            </div>
+        </footer>
+        <div class="raya"></div>
+        <footer class="footer-avianca">
+            <div class="contenedor-footer-avianca">
+                <div id="logo-izquierda">
+                    <a class="img-logo" href="#" role="link">
+                        <img class="img-logo" src="../LandingPages_Avianca/img/logo_avianca_rojo.png" alt="LogoAvianca">
+                    </a>
+                </div>
+                <div id="logo-derecha">
+                    <a class="img-logo"  href="#" role="link" target="_blank">
+                        <img class="img-logo" id="logo-star" src="../LandingPages_Avianca/img/ic-logo-staralliance.png" alt="Logo Star Alliance">
+                    </a>
+                </div>
+
+            </div>
+        </footer>
+        <footer class="footer-derechos">
+            <div class="contenedor-footer" >
+                <div class="derechos">
+                    <p>Avianca S.A. - 2019 Copyright © Todos los derechos
+                            reservados. NIT 890.100.577-6. RNT 21872</p>
+
+                </div>
+            </div>
+        </footer>
 
 
 
