--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <div class="contenedor">
+    <div class="contenedor"><!--contendrá todo el cuerpo-->
         <div class="encabezado"><!--logo de la empresa-->
             <header>
                 <div id="logo" >
@@ -20,7 +20,7 @@
             </header>
         </div>
 
-        <div class="portada">
+        <div class="portada"> <!--portada de la pagina-->
             <div class="contenedor-portada">
                 <div class="informacion">
                     <div class="informacion" id="viaja">
@@ -35,7 +35,7 @@
                 </div>
             </div>
         </div>
-        <section class="partedos">
+        <section class="partedos">  <!--parte que tendrá el formulario con información relevante-->
 
         <form >
             <fieldset>
@@ -99,7 +99,7 @@
 
             </div>
 
-            <div class="vermas"> 
+            <div class="vermas"> <!--boton de redireccionamiento-->
                 <a href="#" role="button" target="_self">
                     Ver más
                 </a>
@@ -107,7 +107,7 @@
 
         </aside>
         </section>
-        <section class="tarjetas">
+        <section class="tarjetas"><!--enlaces rapidos a vuelos economicos-->
             <article class="primer-texto">
                 <h2>¿Qué esperas para vivir una nueva experiencia?</h2>
                 <p>Vuela entre el 4 de octubre de 2019 y el 26 de mayo de 2020.</p>
@@ -222,7 +222,7 @@
             </div>
 
         </section>
-        <footer class="contactanos">
+        <footer class="contactanos"><!--información de contacto de las redes sociales-->
             <div class="texto-contactanos">
                 <p>Contáctanos: </p>
             </div>
